--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <img
               src="/images/Mark.jpg"
               alt="Mark Guerrero"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -76,8 +76,8 @@
             <img
               src="/images/Tom.jpg"
               alt="Tom Ford"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -86,8 +86,8 @@
             <img
               src="/images/Camila.jpg"
               alt="Camila Garcia"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -96,8 +96,8 @@
             <img
               src="/images/Daniel.jpg"
               alt="Daniel Wilson"
-              width="264px"
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
