--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul>
           <li>
             <img
-              src="/images/Mark.jpg"
+              src="./images/Mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -74,7 +74,7 @@
           </li>
           <li>
             <img
-              src="/images/Tom.jpg"
+              src="./images/Tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -84,7 +84,7 @@
           </li>
           <li>
             <img
-              src="/images/Camila.jpg"
+              src="./images/Camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -94,7 +94,7 @@
           </li>
           <li>
             <img
-              src="/images/Daniel.jpg"
+              src="./images/Daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
