--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">Webstudio</a>
       <nav>
         <ul>
+          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
@@ -109,7 +109,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">Webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
