--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
@@ -62,7 +62,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
